# aoc_2024

./: Cargo.toml
src/: main.rs  solutions.rs
src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs
