[package]
name = "aoc_template_rs"
version = "0.1.0"
edition = "2021"
description = "My Advent of Code solutions for 2022 in Rust!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
log = "0.4.22"
regex = "1.11.1"
simple_logger = "5.0.0"
